--- a/src/Tort/appsettings.json
+++ b/src/Tort/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TortDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -6,5 +9,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Tokens": {
+    "Issuer": "ExampleIssuer",
+    "Audience": "ExampleAudience",
+    "Expiration": 60
   }
 }
