--- a/src/Tort/project.json
+++ b/src/Tort/project.json
@@ -25,7 +25,9 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "System.Security.Claims": "4.0.1"
+    "System.Security.Claims": "4.0.1",
+    "Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
+    "System.Net.WebSockets": "4.0.0"
   },
 
   "tools": {
