--- a/src/Tort/appsettings.json
+++ b/src/Tort/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TortDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=TortDb;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TortDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "IncludeScopes": false,
